--- a/src/collect/performance/移动端首屏优化.md
+++ b/src/collect/performance/移动端首屏优化.md
@@ -1,18 +1,43 @@
+我们可以先用 `performance 相关API` 来统计下页面的 `DOM 加载时间`。
+
+旧版统计方法，使用 `performance` (已废弃):
+```js
+window.onload = () => {
+  console.log(performance.timing.domComplete - performance.timing.navigationStart);
+}
+```
+
+新版统计方法，使用 `PerformanceObserver` (推荐使用):
+
 ```js
 // 统计性能
 window.onload = () => {
-  console.log('加载时间', performance.timing.domComplete - performance.timing.navigationStart);
-
   const observer = new PerformanceObserver((list) => {
     list.getEntries().forEach(entry => {
-      console.log('entry', entry);
-      console.log('entry', entry.domComplete);
+      console.log(entry.domComplete);
     })
   })
   observer.observe({ entryTypes: ['navigation'] })
-
 }
 ```
+
+如果 `DOM加载时间` 过长，比如超过 1s，就需要考虑进行优化了，优化的话主要从以下几个方向进行：
+- 网络资源请求
+- 构建工具
+- 缓存
+- 渲染
+- 
+
+## 一、网络资源请求
+### 1.1 减少请求个数
+图片采用 `雪碧图(CSS Sprites)`，`base64`。
+
+### 1.2 加快请求速度
+将图片上传到 `cdn`。
+
+## 二、构建工具
+这里以 `webpack` 为例。
+### 2.1 
 
 ## 异步组件
 
@@ -47,3 +72,5 @@ window.onload = () => {
 用户体验：
 - 骨架屏
 - 懒加载
+
+## 缓存
