--- a/src/collect/performance/首屏优化.md
+++ b/src/collect/performance/首屏优化.md
@@ -1,5 +1,7 @@
 <!-- 标题： 面试官：首屏加载速度慢怎么办？ -->
 
+在前端面试中，首屏优化一直是常见的前端性能面试题。
+
 我们可以先用 `performance 相关API` 来统计下页面的 `DOM 加载时间`。
 
 旧版统计方法，使用 `performance`:
