--- a/src/collect/operation/小红书.md
+++ b/src/collect/operation/小红书.md
@@ -74,3 +74,11 @@
 ### 3. 如何安全高效的引流和变现
 ### 4. 如何让帖子发布一年后也能继续带来收入
 ### 5. 小红书群体的赚钱逻辑是什么
+
+## 第一篇笔记
+
+“基金连续3年亏损，今年终于开始赚💰了”
+
+3年亏损高亮
+
+“买了5年基金，来听听我的一些真心话”
