--- a/src/collect/performance/页面卡顿.md
+++ b/src/collect/performance/页面卡顿.md
@@ -17,7 +17,16 @@
 a = 1;
 ```
 
+在 `window` 上挂载大内存对象：
+
+```js
+// 分配100万个32位浮点数（约4MB内存）
+window.largeFloatArray = new Float32Array(1000000);
+```
+
 #### 1.2.2 闭包引起的内存泄漏
+```js
+```
 #### 1.2.3 定时器引起的内存泄露
 #### 1.2.4 未解除的DOM引用造成的内存泄漏
 #### 1.2.5 循环引用
