--- a/src/collect/interview/我的面试亮点.md
+++ b/src/collect/interview/我的面试亮点.md
@@ -6,7 +6,10 @@
 
 
 项目亮点：（微创新，讲起来头头是道）
-1、 性能优化  死抓性能，性能瓶颈  包括ssr   虚拟列表  一周
+1、 性能优化  死抓性能，性能瓶颈  包括ssr   虚拟列表 
+2、企业级监控品泰
+3、低代码
+4、协同文档
 
 
 举案例时，从发现-定位-提出方案-实施-验证的全过程丰富圆满
