--- a/src/collect/group/如何克服拖延症.md
+++ b/src/collect/group/如何克服拖延症.md
@@ -5,7 +5,7 @@
 比如你穿过的袜子，本该当天洗了晒干的，而你却随手一丢不管，任它滋生细菌，往往攒了一周的袜子，然后一次性洗完，美其名曰“节约用水”，你还别说，我当时有个高中同学就是这么干的。
 
 ## 为什么会有拖延
-从古至今，人类的大脑往往倾向于做一些
+从古至今，人类的大脑往往倾向于做一些节省体力的事情。
 
 ## 克服拖延症的方法
 1. 5 分钟起步法
