--- a/src/collect/performance/页面卡顿.md
+++ b/src/collect/performance/页面卡顿.md
@@ -1,5 +1,7 @@
 参考资料：https://blog.csdn.net/weixin_50576800/article/details/124392902
 
+https://segmentfault.com/a/1190000039132414
+
 对于前端页面来讲，页面卡顿是一个常见的性能问题，这里主要从**造成页面卡顿的原因**、**如何检测和排查页面卡顿**、以及**优化页面卡顿的最佳实践**这三个方向进行分析。
 
 ## 一、造成页面卡顿的原因
@@ -11,13 +13,13 @@
 ### 1.2 内存占用高，存在内存泄漏
 #### 1.2.1 全局变量引起的内存泄漏
 
-未声明的变量会直接挂载到 `window` 上。
+1. js 有个特点，未声明的变量会直接挂载到 `window` 上，这样就会造成内存泄漏。
 
 ```js
 a = 1;
 ```
 
-在 `window` 上挂载大内存对象：
+2. 在 `window` 上挂载大内存对象：
 
 ```js
 // 分配100万个32位浮点数（约4MB内存）
@@ -25,7 +27,31 @@ window.largeFloatArray = new Float32Array(1000000);
 ```
 
 #### 1.2.2 闭包引起的内存泄漏
+
+其实闭包不会引起内存泄漏，滥用闭包才会。
+
 ```js
+const heapdump = require('heapdump');
+heapdump.writeSnapshot('start.heapsnapshot'); // 记录应用开始时的内存dump
+let foo = null;
+function outer() {
+    let bar = foo;
+    function unused() { // 未使用到的函数
+        console.log(`bar is ${bar}`);
+    }
+
+    foo = { // 给foo变量重新赋值
+        bigData: new Array(100000).join("this_is_a_big_data"), // 如果这个对象携带的数据非常大，将会造成非常大的内存泄漏
+        inner: function() {
+            console.log(`inner method run`);
+        }
+    }
+}
+for(let i = 0; i < 1000; i++) {
+    outer();
+}
+heapdump.writeSnapshot('end.heapsnapshot'); // 记录应用结束时的内存dump
+
 ```
 #### 1.2.3 定时器引起的内存泄露
 #### 1.2.4 未解除的DOM引用造成的内存泄漏
