--- a/src/collect/performance/页面卡顿.md
+++ b/src/collect/performance/页面卡顿.md
@@ -1,8 +1,8 @@
-参考资料：https://blog.csdn.net/weixin_50576800/article/details/124392902
+<!-- 参考资料：https://blog.csdn.net/weixin_50576800/article/details/124392902
 
 https://segmentfault.com/a/1190000039132414
 
-https://juejin.cn/post/7488532479482888219
+https://juejin.cn/post/7488532479482888219 -->
 
 对于前端页面来讲，页面卡顿是一个常见的性能问题，这里主要从**造成页面卡顿的原因**、**如何检测和排查页面卡顿**、以及**优化页面卡顿的最佳实践**这三个方向进行分析。
 
@@ -30,7 +30,6 @@ window.largeFloatArray = new Float32Array(1000000);
 
 #### 1.2.2 闭包引起的内存泄漏
 
-<!-- 其实闭包不会引起内存泄漏，滥用闭包才会。 -->
 
 ```js
 
@@ -43,25 +42,56 @@ function addEvent(){
 }
 addEvent();
 ```
+
+这里通过闭包引用了 `hugeData`，导致 `hugeData` 无法被回收，从而造成内存泄漏。需要在合适的时机移除掉事件监听器。
+
 #### 1.2.3 定时器引起的内存泄露
 ```js
 function genTimer(){
     let count = 0;
     setInterval(function(){
         count++;
-        console.log(count); // 定时器闭包包含了 count 的引用
+        console.log(count);
     })
 }
 
 genTimer();
 ```
+这里的 `setInterval` 定时器的回调函数引用了外部的 `count` 变量，如果在合适的时机没有清除定时器，就会导致内存泄漏。
 
 #### 1.2.4 未解除的DOM引用造成的内存泄漏
+```js
+let el = document.getElementById('button');
+```
+
+如果 `el` 被存储在某个地方，并且该元素被移除，但 `el` 仍然被引用，那么它将不会被垃圾回收，从而导致内存泄漏。
+
 #### 1.2.5 循环引用
+
+**循环引用**指的是两个或多个对象相互引用，形成一个循环结构，导致无法被回收。
+
+```js
+let a = {};
+let b = {};
+a.c = b;
+b.c = a;
+```
 
 ### 1.3 长任务
 
 由长任务会让 `JavaScript` 执行时间过长，导致渲染不及时，页面卡顿。
+
+```js
+function longSyncTask(duration) {
+    const start = performance.now();
+    while (performance.now() - start < duration) {
+        // 空循环，阻塞主线程
+    }
+    console.log(`同步长任务完成，耗时 ${performance.now() - start}ms`);
+}
+
+longSyncTask(3000); // 模拟一个耗时3秒的同步长任务
+```
 
 ## 二、页面卡顿如何排查
 
@@ -133,7 +163,7 @@ requestAnimationFrame(checkFPS);
 
 
 ## 三、优化页面卡顿的最佳实践
-1. 分批处理大任务：使用requestIdleCallback或setTimeout分块执行
-2. 避免频繁DOM操作：使用文档片段或虚拟DOM
-3. 优化动画：使用requestAnimationFrame而非setTimeout
-4. 使用Web Worker：将计算密集型任务移出主线程
+1. 分批处理大任务：使用 `requestIdleCallback` 或 `setTimeout` 分块执行。
+2. 避免频繁DOM操作：使用文档片段或虚拟DOM。
+3. 优化动画：使用 `requestAnimationFrame` 而非 `setTimeout`。
+4. 使用 `Web Worker`：将计算密集型任务移出主线程。
