--- a/src/collect/mysql/1.md
+++ b/src/collect/mysql/1.md
@@ -1,4 +1,9 @@
 ## 为什么要学习 MYSQL ？
+1. MySQL 是世界上最流行的开源关系型数据库。
+2. 功能强大，适合系统大多数应用场景，性能高，支持事事务保证数据的一致性。
+3. 职业发展的必备技能：后端开发（Java/Python/PHP）、全栈开发等开发岗位通常要求掌握 MYSQL。运维和 DBA 岗位也是如此。
+4. 成本低：社区版开源免费，足够中小型企业或者个人学习使用，如需要更加强大的功能和技术支持可以使用付费的商业版。
+5. 跨平台、丰富学习资源：支持 windows、Linux、macOS。官方文档完善，社区活跃。
 
 
 ## 基础篇
