--- a/src/collect/performance/页面卡顿.md
+++ b/src/collect/performance/页面卡顿.md
@@ -9,16 +9,18 @@ https://juejin.cn/post/7488532479482888219 -->
 ## 一、造成页面卡顿的原因
 
 ### 1.1 页面掉帧
-- 回流和重绘多：优化DOM操作
-- DOM节点多：采用分页、虚拟列表等方式进行优化
+- 回流和重绘多：优化DOM操作。
+- DOM节点多：采用分页、虚拟列表等方式进行优化。
 
 ### 1.2 内存占用高，存在内存泄漏
 #### 1.2.1 全局变量引起的内存泄漏
 
-1. js 有个特点，未声明的变量会直接挂载到 `window` 上，这样就会造成内存泄漏。
+1. js 有个特点，未声明的变量会直接挂载到 `window` 上，也被称为**隐式全局变量**，这样虽然方便后续变量访问，但会造成内存泄漏。
 
-```js
-a = 1;
+```html
+<script>
+a = 1; // 相当于 window.a = 1;
+</script>
 ```
 
 2. 在 `window` 上挂载大内存对象：
@@ -121,8 +123,9 @@ console.log(`操作耗时: ${duration}毫秒`);
 ```
 
 ### 2.3 长任务检测
+使用 `PerformanceObserver API` 可以检测检测长任务(>50ms)。
+
 ```js
-// 使用PerformanceObserver API检测长任务(>50ms)
 const observer = new PerformanceObserver((list) => {
   for (const entry of list.getEntries()) {
     console.log('长任务:', entry);
