--- a/src/collect/operation/小红书.md
+++ b/src/collect/operation/小红书.md
@@ -82,3 +82,11 @@
 3年亏损高亮
 
 “买了5年基金，来听听我的一些真心话”
+
+从21年开始买基金，累计亏损4万多。
+
+这些年我踩过的一些坑：
+1. 都说基金要长期持有，但长期持有真的能赚钱吗？21年买入白酒、医疗，然后跌了3年，而有些基金却是涨了3年，比如美股纳斯达克，黄金等，虽然它们短期会有回调，但长期看，它们都是处于在上涨状态的。所以选对方向 + 长期持有，才是最重要的。
+2. 千万别全仓买入，要不然基金下跌，无法获取
+3. 去年也就是2025年9.24行情前，我割肉了白酒和医疗，然后在9.24行情前。
+
