--- a/src/collect/mysql/函数.md
+++ b/src/collect/mysql/函数.md
@@ -29,5 +29,35 @@ update user set userId = lpad(userId`, 6, '0');
 ## 数值函数
 1. ceil(x) 向上取整
 2. floor(x) 向下取整
-3. round(x,y) 四舍五入
-4. mod(x,y) 取余 
+3. round(x,y) 四舍五入，保留y位小数
+4. mod(x,y) 求模
+5. rand() 生成0-1内的随机数
+
+生成随机6位验证码：
+
+select lpad(round(rand()*1000000,0), 6, '0');
+
+## 日期函数
+1. curdate() 当前日期
+2. curtime() 当前时间
+3. now() 当前日期和时间
+4. year(date) 年
+5. month(date) 月
+6. day(date) 日
+7. date_format(date,fmt) 按照指定格式输出日期
+8. datediff(date1,date2) 两个日期的差值
+9. date_add(date,interval expr type) 日期加减
+
+select now();
+
+select date_format(now(), '%Y年%m月%d日 %H时%i分%s秒');
+
+select datediff('2022-01-01', '2021-01-01');
+
+select date_add(now(), interval 1 day);
+
+## 流程函数
+1. if(value,t,f) 如果value为true，则返回t，否则返回f
+2. ifnull(value1,value2) 如果value1不为空，则返回value1，否则返回value2
+3. case when [val1] then [res1] ... else [default] end 如果val1为true，则返回res1，否则返回default
+4. case [expr] when [val1] then [res1] ... else [default] end 如果expr的值等于val1，则返回res1，否则返回default
