--- a/src/collect/operation/小红书.md
+++ b/src/collect/operation/小红书.md
@@ -90,3 +90,10 @@
 2. 千万别全仓买入，要不然基金下跌，无法获取
 3. 去年也就是2025年9.24行情前，我割肉了白酒和医疗，然后在9.24行情前。
 
+
+买基金并不是长期持有就能赚钱，更重要的是要选对方向！我22年高位接盘白酒、医疗，然后拿了3年跌了3年，而有些基金却是涨了3年，比如美股纳斯达克，黄金等，虽然它们短期会有回调，但长期看，它们都是处于在上涨状态的。所以选对方向 + 长期持有，才是最重要的。
+
+千万别轻易梭哈，要不然万一买入后基金下跌，没有资金补仓来拉低持仓成本，操作空间受限。
+
+别借钱贷款用来投资，风险太高。
+
