--- a/src/collect/fund/投资方向.md
+++ b/src/collect/fund/投资方向.md
@@ -6,10 +6,11 @@
 5. 主动型科技基金：机器人/创新药/AI算力/AI应用/半导体
 
 投资策略：
-1. 玩短线投资。
+1. 玩中短线投资。
 2. 高位的板块轻仓参与，涨上去就卖掉，跌下去再逐步加仓，低位的板块重仓参与，博一波反弹就走。
-3. 银行/上证指数/黄金风险相对较小，可大胆一点买入。
+3. 上证指数/黄金风险相对较小，可大胆一点买入，玩短期套利。
 4. 纳斯达克等回调机会，仓位从A股转移过来，然后重仓买入，做中长线持有。
+5. 看中方向和趋势后，做中长线投资。
 
 注意规律：
 1. 黄金和纳斯达克时跷跷板
