--- a/src/collect/fund/投资方向.md
+++ b/src/collect/fund/投资方向.md
@@ -1,18 +1,17 @@
+## 投资教训
+1. 不要贪心，达到预期收益就走
+2. 不要重仓追高，觉得还会涨
+3. 趋势坏了果断割肉，保住收益
+
 ## 投资方向
 1. 美股纳斯达克 美股回调时大胆低吸
 2. 黄金  招行黄金，买入价低于770是买点，卖出价高于775逐步止盈。
 3. 上证指数，看市场整体情绪，低于3000点是最佳买点，3400点以下风险较小，可逢低买入，有1到2个点左右收益即可卖出，波段操作
-4. 银行/红利股：风险较小，可逢低重仓买入
-5. 主动型科技基金：机器人/创新药/AI算力/AI应用/半导体
 
 投资策略：
-1. 玩中短线投资。
-2. 高位的板块轻仓参与，涨上去就卖掉，跌下去再逐步加仓，低位的板块重仓参与，博一波反弹就走。
-3. 上证指数/黄金风险相对较小，可大胆一点买入，玩短期套利。
-4. 纳斯达克等回调机会，仓位从A股转移过来，然后重仓买入，做中长线持有。
-5. 看中方向和趋势后，做中长线投资。
+1. 上证指数/黄金风险相对较小，可大胆一点买入，玩短期套利。
+2. 纳斯达克等回调机会，仓位从A股转移过来，然后重仓买入，做中长线持有。
 
 注意规律：
 1. 黄金和纳斯达克时跷跷板
-2. 银行属于权重，一般来说银行拉高沪深300指数也会跟着拉高，沪深300指数很低时，国家队会出来拉银行护盘。
-3. 全天下跌 尾盘突然拉升，小心诱多，赶快卖
+2. 全天下跌 尾盘突然拉升，小心诱多，赶快卖
