--- a/src/collect/fund/投资方向.md
+++ b/src/collect/fund/投资方向.md
@@ -8,6 +8,10 @@
 2. 黄金  招行黄金，买入价低于770是买点，卖出价高于775逐步止盈。
 3. 上证指数，看市场整体情绪，低于3000点是最佳买点，3400点以下风险较小，可逢低买入，有1到2个点左右收益即可卖出，波段操作
 
+上证指数ETF  510210
+黄金ETF 518600
+纳指ETF 159941
+
 投资策略：
 1. 上证指数/黄金风险相对较小，可大胆一点买入，玩短期套利。
 2. 纳斯达克等回调机会，仓位从A股转移过来，然后重仓买入，做中长线持有。
