--- a/src/collect/fund/投资方向.md
+++ b/src/collect/fund/投资方向.md
@@ -8,9 +8,15 @@
 2. 黄金  招行黄金，买入价低于770是买点，卖出价高于775逐步止盈。
 3. 上证指数，看市场整体情绪，低于3000点是最佳买点，3400点以下风险较小，可逢低买入，有1到2个点左右收益即可卖出，波段操作
 
-上证指数ETF  510210
-黄金ETF 518600
-纳指ETF 159941
+证券账户买以下的ETF：
+1. 上证指数ETF  510210
+2. 黄金ETF 518600
+3. 纳指ETF 159941
+
+上证指数ETF操作策略：跌 0.5% 买入，涨 0.5% 卖出
+
+基金账户买一只最强方向，比如云计算，挑满7天无手续费的，做高抛低吸，短期套利。
+
 
 投资策略：
 1. 上证指数/黄金风险相对较小，可大胆一点买入，玩短期套利。
