--- a/src/collect/group/如何养成习惯.md
+++ b/src/collect/group/如何养成习惯.md
@@ -1,3 +1,7 @@
+养成习惯的过程实际上就是成为你自己的过程。
+
+习惯的养成要经历四个阶段：提示、渴求、反应、奖励。
+
 人的记忆分为两种：
 1. 情境记忆：通过具体的时间地点，回想起这些情境去记住一个事件。比如你生日的那天发生了什么，第一次见面有什么感受。
 2. 程序性记忆：通过上下文去记住事件，比如每次起床前，先听到闹钟响，然后起床、、穿衣服、刷牙，这些事情就像是一环扣一环的锁链一样，你不需要思考就能完成，执行了一个动作，就会自动执行下一个动作。
