--- a/src/collect/typescript/1.ts介绍.md
+++ b/src/collect/typescript/1.ts介绍.md
@@ -1,11 +1,20 @@
 ## JavaScript 的缺陷
 `JavaScript` 是一门动态语言，缺少类型检查，在编写和维护大型项目时比较吃力。
+- 缺少对模块的支持
+- 缺少对开发者工具的支持
+
+
 
 ## TypeScript 介绍
 
 `TypeScript` 是 `JavaScript` 的超集，它在 `JavaScript` 基础上增加了类型系统和其他高级特性。
 
-## 为什么要学习 TypeScript
+## TypeScript历史
+- 2012年10月1日，微软公司发布第一个公开预览版v0.8。
+- 2014年4月2日，TypeScript 1.0版本发布。
+- 2016年9月22日，TypeScript 2.0版本发布。
+- 2018年7月30日，TypeScript 3.0版本发布。
+
 
 ## TypeScript的优缺点
 一、 优点：
@@ -74,6 +83,17 @@
 值得一提的是，在版本列表的头部有一个特殊的版本 `Nightly`，即 `每日构建版`， `TypeScript` 每天会自动从其代码仓库的主分支上拉取最新的代码并构建出一个 `Nightly` 版本，然后分别发布到 `npm` 和 `NuGet`，方便用户尽早地试用新版的软件并提供反馈信息。
 
 `NuGet`是一个免费并且开源的`.NET`包管理器，作为 `Visual Studio` 的扩展并随着 `Visual Studio` 在2012年首次发布，可以方便地管理程序包，包括安装、更新、删除等操作。
+
+
+## TypeScript 的产品
+1. Visual Studio Code
+
+`Visual Studio Code` 是微软公司开源的一款免费、跨平台的集成开发环境，支持多种编程语言，它是使用 TypeScript 语言并基于 Electron 框架进行开发的。
+
+2. Angular
+
+`Angular` 是由 Google 开发和维护的开源 Web 应用程序框架，它使用 TypeScript 进行完全重构，Angular 团队也推荐使用 TypeScript 语言作为 Angular 应用的首选开发语言。
+
 
 ## 搭建 TypeScript 开发环境
 
