--- a/src/collect/interview/我的面试亮点.md
+++ b/src/collect/interview/我的面试亮点.md
@@ -7,9 +7,17 @@
 
 项目亮点：（微创新，讲起来头头是道）
 1、 性能优化  死抓性能，性能瓶颈  包括ssr   虚拟列表 
-2、企业级监控品泰
-3、低代码
-4、协同文档
+
+1. 业务项目 PC端+移动端开发+小程序
+- SSR，首屏性能，前端性能优化
+- 大数据渲染，虚拟列表
+- 富文本
+
+2. 低代码平台 全栈开发
+
+
+3. 企业级前端监控平台
+
 
 
 举案例时，从发现-定位-提出方案-实施-验证的全过程丰富圆满
