--- a/src/collect/interview/project/低代码.md
+++ b/src/collect/interview/project/低代码.md
@@ -19,3 +19,78 @@
 5. 用户体验
 - 低代码平台的目标是让用户能够直观、简便地进行操作。通过mouse事件可以实现更直观、流畅的拖拽体验，例如在拖拽开始时，通过鼠标按下事件获取用户意图，在拖动过程中动态展示拖拽反馈，用户释放鼠标时再放置元素。
 - drag 事件更多的是基于浏览器内置的拖拽操作，它可能不如使用mouse事件时那样灵活，无法很好地满足低代码平台要求的自定义交互需求。
+
+## 黑名单设置
+- 通过 `blackListSet` 列出不可访问的全局对象（如 document、fetch）
+- 在沙箱中访问这些对象时返回一个黑洞代理，避免报错
+
+```js
+const blackListSet = new Set([
+  'top',
+  'self',
+  'parent',
+  'global',
+  'globalThis'
+  'document',
+  'fetch',
+  'window',
+  'frames',
+  'XMLHttpRequest',
+  'MutationObserver',
+]);
+```
+
+## 黑洞代理
+- 任何对黑名单对象的访问，都会返回一个虚拟的“黑洞对象”
+- 黑洞对象会吞掉任何访问或调用，而不会抛出异常
+
+```ts
+function createBlackHole() {
+  return new Proxy(
+    function () {
+      return createBlackHole();
+    },
+    {
+      get(_, p) {
+        if (p === 'toString' || p === Symbol.toPrimitive) {
+          return createBlackHole();
+        }
+      },
+    }
+  )
+}
+```
+
+## 沙箱代理
+- 使用 `Proxy` 创建沙箱对象，拦截用户代码对全局对象的访问。
+- 对于黑名单对象，返回黑洞代理；对于正常对象，返回真实值或绑定后的函数。
+
+```ts
+function createMockWindow(base?: object) {
+  const win: any = new Proxy(Object.assign({}, base), {
+    get(target, p) {
+      if (globalVarNames.has(p)) return win;
+      if (blackListSet.has(p as string)) return createBlackHole();
+      return Reflect.get(window, p);
+    }
+  })
+  return win;
+}
+```
+
+## 沙箱运行代码
+- 使用 `with` 语句注入沙箱对象，将用户代码与沙箱隔离。
+- 通过严格模式（'use strict'）防止意外的全局变量泄漏。
+
+```ts
+function runUsersCode(code: string) {
+  const finalCode = `with(this) {
+
+    return (function() {
+      'use strict';
+      return (${code});
+      }).call(this);
+  }`
+  return new Function(finalCode);
+}
+```
