--- a/src/collect/interview/面试回顾.md
+++ b/src/collect/interview/面试回顾.md
@@ -12,3 +12,24 @@
 
 ## 表格
 1. canvas 表格
+
+
+## 前端埋点
+1. 曝光埋点
+
+
+低代码平台难点
+
+
+## 项目难点
+
+## 负责什么工作
+
+3分管理7分技术
+
+技术方面：技术方案设计、项目搭建、规范制定，代码codeReview、技术分享、线上问题处理、核心功能开发、项目进度、风险把控
+
+管理方面：分配开发任务、绩效管理、人员培训
+
+
+## 优化首屏
