--- a/src/collect/interview/面试回顾.md
+++ b/src/collect/interview/面试回顾.md
@@ -32,7 +32,11 @@
 管理方面：分配开发任务、绩效管理、人员培训
 
 
-## 优化首屏
+## 优化首屏  不一样的优化方案
+
+## vue3的diff
+
+## 难点
 
 ## ref
 
@@ -41,3 +45,5 @@
 ## websocket 协议 沾包
 
 ## 设计模式 设计原则
+
+## js中的内存管理
