--- a/src/collect/engineer/微前端.md
+++ b/src/collect/engineer/微前端.md
@@ -1,3 +1,8 @@
+## 微前端架构的核心价值
+1. 团队协作：多个团队可以并行开发，互不阻塞
+2. 技术栈无关：针对不同的业务模块选择不同的技术栈
+3. 独立部署：每个子应用可以独立部署，不影响其他应用
+4. 渐进式重构：可以逐步将旧系统中的模块迁移到微前端架构中
 ## 说说微前端架构整体演进过程和架构
 
 项目痛点：
