--- a/src/collect/interview/project/低代码平台/1. 需求分析、架构设计、核心流程.md
+++ b/src/collect/interview/project/低代码平台/1. 需求分析、架构设计、核心流程.md
@@ -1,4 +1,4 @@
-## 学习目标
+# 学习目标
 初中级：
 1. **低代码核心需求分析与竞品研究**：能够理解低代码平台的核心需求，包括编排引擎、数据整合与变量系统的设计与实现，掌握多种编排引擎（如珊格布局、Flex布局、自由拖拽）的工作原理和适用场景；通过分析 Retool、Webflow、Framer、llla、Appsmith、Tooljet、Zion、Flutterflow 等竞品，理解不同低代码平台的设计特点与差异化优势。
 2. **项目架构设计与模块化分析**：理解低代码平台的架构设计原则，掌握基于 monorepo 的全栈架构的组织方式，能够设计和组织模块化代码结构，支持平台的灵活性和扩展性。
@@ -11,3 +11,38 @@
 4. **工程化与质量控制思想**：理解使用 ESLint、Prettier、CommitLint 等工具进行代码质量控制的工程化思想，掌握制定开发规范的流程，理解如何通过代码风格一致性、提交信息规范化和工程化工具的使用提升项目可维护性和团队协作效率。
 5. **UI 组件库设计思路**：理解给予 Tailwind CSS 和 Radix UI 构建低代码平台 UI 组件库的设计思想，掌握工具栏、菜单、动态表单等复杂 UI 组件的实现方式，提升平台界面的一致性和扩展性。
 
+# 项目需求评审
+
+## 项目概述
+该项目旨在设计和开发一个具有灵活性、易用性和高扩展性的低代码平台，核心目标是为企业或个人用户提供快速搭建复杂业务场景的能力。项目需支持最好用的编排引擎体系、丰富的数据源集成，以及可视化的变量系统和流程配置。通过该平台，用户可以以最小的技术投入实现高度定制化的业务功能。
+
+## 背景需求
+在当前技术与市场环境中，企业用户需要快速开发内部管理工具，而C端用户则希望拥有简单易用的页面构建工具。
+这种双重需求推动了低代码平台的发展，需要一款既支持企业用户高效处理复杂业务逻辑，又能满足C端用户轻松实现可视化页面设计的低代码解决方案。
+
+通过借鉴Retool的强大变量体系和Query数据管理能力，以及Webflow的易用编排引擎设计，我们旨在开发一款兼具功能强大与操作简单的低代码平台，满足多场景、多角色的需求。
+
+
+# 低代码其他核心功能简述
+## 流程引擎（也是重点，这期暂不展开）
+- 内存型流程引擎编辑器与执行器
+- OA审批流程
+- 工作流于自动化流程执行器（服务端）
+## 权限管理
+- 角色与权限配置：支持管理员、开发者、访客等角色，提供基于角色的操作权限分配。
+- 组件级权限控制：限制敏感数据或功能的访问，保障安全性。
+
+## 模板与复用机制
+- 页面与组件模板：支持用户保存自定义的页面与组件配置，提升复用效率。
+- 官方模板库：内置常见业务场景的模板，帮助用户快速开始项目开发。
+## 实时协作
+- 多人协作：支持多人同时在线编辑，通过WebSocket实现实时同步。
+- 协同功能：如协同光标、操作记录与版本历史，增强团队合作效率。
+## 导入与导出
+- 项目导入导出：支持JSON或YAML格式，便于项目的备份与迁移。
+- 代码导出：生成React、Vue项目代码，便于用户在传统开发环境中继续扩展。
+
+## 动画与用户体验优化
+- 拖拽对齐与吸附：帮助用户快速完成精准的布局调整。
+- 交互动画与过渡效果：提升操作体验，帮助用户理解平台逻辑。
+- 动效体系：可以为物料提供丰富的动效设置，极大丰富构建应用的定制化能力。
