--- a/src/collect/interview/project/低代码平台/低代码.md
+++ b/src/collect/interview/project/低代码平台/低代码.md
@@ -11,7 +11,7 @@
 
 3. 性能优化
 - 使用mouse事件通常会带来更好的性能优化。在拖拽过程中，mousemove事件的触发频率较高，开发者可以有针对性地进行性能优化，例如通过节流(throttling)或防抖(debouncing)来减少不必要的DOM更新。
-- drag 事件本身可能会导致频繁的重绘和重排，尤其是在拖拽过程中需要频繁更新元素的位置和状态时，性能开销可能较大。相比之下，mous事件可以让开发者更有针对性地控制哪些元素需要更新，哪些可以跳过，优化性能表现。
+- drag 事件本身可能会导致频繁的重绘和重排，尤其是在拖拽过程中需要频繁更新元素的位置和状态时，性能开销可能较大。相比之下，mouse 事件可以让开发者更有针对性地控制哪些元素需要更新，哪些可以跳过，优化性能表现。
 
 4. 兼容性和稳定性
 - 在一些浏览器或设备中，drag事件的表现可能会有所不同，尤其是在触摸设备和桌面设备之间的差异。mouse事件通常具有更广泛的兼容性，并且行为在不同浏览器之间更为一致。
@@ -19,6 +19,16 @@
 5. 用户体验
 - 低代码平台的目标是让用户能够直观、简便地进行操作。通过mouse事件可以实现更直观、流畅的拖拽体验，例如在拖拽开始时，通过鼠标按下事件获取用户意图，在拖动过程中动态展示拖拽反馈，用户释放鼠标时再放置元素。
 - drag 事件更多的是基于浏览器内置的拖拽操作，它可能不如使用mouse事件时那样灵活，无法很好地满足低代码平台要求的自定义交互需求。
+
+## 物料拖拽的基本原理
+物料拖拽的基本过程是：
+1. 鼠标按下(mousedown): 用户点击并按下鼠标时，我们开始记录鼠标的位置，并准备拖拽操作。
+2. 鼠标移动(mousemove): 当鼠标移动时，我们更新物料的位置信息，动态地改变物料的位置。
+3. 鼠标释放(mouseup): 当鼠标松开时，物料被放置到新的位置。
+
+在这个过程中，我们还需要处理一些额外的细节，比如：
+- 拖拽指示线：显示物料拖拽过程中可能放置的目标区域。
+- 碰撞检测：检测拖拽物料是否与页面上的其他元素发生重叠，并显示合适的反馈。
 
 ## 黑名单设置
 - 通过 `blackListSet` 列出不可访问的全局对象（如 document、fetch）
