--- a/src/collect/interview/project/低代码平台/面试.md
+++ b/src/collect/interview/project/低代码平台/面试.md
@@ -1,3 +1,6 @@
+点击进去是一个应用，左侧是物料预览、物料，中间是可视化编排区、右边是物料配置、页面配置
+
+
 # 请说说你之前负责的低代码平台都有哪些功能，具体什么业务，以及核心流程与方案
 ## 核心功能
 优化前:
@@ -16,11 +19,35 @@
 
 
 沉淀产物 (monorepo packages):
-1. layout-engine-sdk
-2. material-renderer
+1. layout-engine-sdk（编排引擎）
+2. material-renderer（渲染引擎）
 3. onLine-database-sdk (千万行数据的渲染canvas-table)
 4. flow-engine (flow-editor、flow-interpretor)
 5. resource (大文件上传)
   - file-uploader
 ## layout-engine
 基础功能
+1. 引擎分类
+    - grid
+    - flex
+    - canvas
+    - block
+2. 应用场景
+  - CRM、ERP
+  - 仪表盘
+  - 表单，OA，数据源
+
+## material-renderer
+基础功能
+1. 渲染方式（B端和C端）
+2. 设备兼容（PC端、手机端）
+3. 主题的定制
+  - 样式 token（提前在变量体系中定义好）
+  - 样式消费
+
+## onLine-database-sdk 
+1. canvas table（考虑性能）
+2. 类似于飞书多维表，字段管理，单元格交互（CellEditor、CellRenderer、CellValidator、CellRules）
+3. 表设计
+  - Schema（管理字段）、业务表（存储字段数据）
+4. 外部数据连接
