--- a/src/collect/interview/project/低代码平台/面试.md
+++ b/src/collect/interview/project/低代码平台/面试.md
@@ -51,3 +51,93 @@
 3. 表设计
   - Schema（管理字段）、业务表（存储字段数据）
 4. 外部数据连接
+
+## 低代码平台主要业务场景
+1. 企业内部系统
+  - 报表、运营后台、审批
+  - 听过多种模版，快速搭建系统
+2. 业务自动化系统
+  - 订单处理、通知系统
+  - 流程引擎和自动化为核心，减少人员干预
+3. C 端产品
+  - 活动页、落地页
+4. 设计类的工具软件
+  - figma ai
+  - 创客贴 canvas 可画
+
+# 详细说说低代码平台核心模块对应方案的选择以及架构实现，包含布局引擎、渲染引擎、数据源、流程引擎等
+
+## layout-engine
+
+### Flex 布局
+类似于我们传统写代码 flex 布局的方式。兼顾灵活和易用。
+
+- figma outLayout
+
+### Block 布局
+从上到下布局，没有左右之分，灵活度比较低
+
+- 简单的无代码平台
+
+### Grid 布局
+参照格子点来布局，自动吸附在格子上。
+
+- 仪表盘
+- 可视化大屏
+
+### Canvas 布局
+设计类软件居多，100% 灵活的布局方式。
+
+## material-renderer
+
+平台的特定语言设计 DSL（Domain Specific Language）。JSONschema，整个平台编排完之后，存储的肯定是一个 json。
+
+为了性能考虑，拆分为数据结构 json 和内容数据 json。
+
+blockTree：
+```js
+[
+  {
+    id: 'container-a',
+    type: 'container',
+    children: [
+      {
+        id: 'text-a',
+        type: 'text',
+      },
+      {
+        id: 'icon-a',
+        type: 'icon',
+      },
+       {
+        id: 'button-a',
+        type: 'button',
+      }
+    ]
+  }
+]
+```
+
+blocks: map结构，方便取数据
+```js
+{
+  'container-a': {
+    id: 'container-a',
+    title: '默认标题'
+  }
+}
+```
+
+### 数据存储时的优化考虑
+1. 增量更新，操作变换 OT，json patch（增、删、改、移动 —— 统一归纳为 update op）
+2. 可视区渲染（懒加载）
+
+### online-database-sdk
+数据表、在线多维表
+
+1. canvas table
+2. 数据消费逻辑
+  - Query 模块进行消费（在前端实现了一个 sql 查询编辑器【低代码】）
+  - 变量的方式
+
+## 你作为Leader,在负责低代码平台整体架构时，核心产出是什么，请从业务与技术角度详细说说：
