--- a/src/collect/interview/project/低代码平台/2. 物料管理、编排引擎设计与页面渲染器设计开发 .md
+++ b/src/collect/interview/project/低代码平台/2. 物料管理、编排引擎设计与页面渲染器设计开发 .md
@@ -56,6 +56,20 @@ const initBlocks = useBlockStore(state => state.initBlocks);
 
 EditorLeftPanel: 物料管理面板
 
+### 插件化设计
+- 插件化基座/底座
+- 插件化协议
+- 插件生命周期
+- 插件封装、开发
+
+### 物料最重要的两个东西是什么？
+1. 数据协议，json 数据
+2. 物料渲染引擎
+
+渲染引擎：
+- 组件，用来将 json 数据渲染成页面内容
+- Renderer，通过策略模式负责数据转换加工、数据到组件的传递、组件渲染
+
 ## 总结
 - 物料管理和 Block 设计是低代码平台开发中的关键部分。通过有效的物料管理，我们可以确保组件的高效复用和状态的统一管理。
 - Block 设计通过树形结构和状态管理来组织和控制组件的层次关系，使得复杂页面能够被拆分成独立的、易于管理的模块。
