--- a/src/collect/interview/project/低代码平台/1. 需求分析、架构设计、核心流程.md
+++ b/src/collect/interview/project/低代码平台/1. 需求分析、架构设计、核心流程.md
@@ -73,7 +73,7 @@
 
 ### 竞品功能对比
 
-![图片加载失败](../../assets/images/project/lowcode-compare.png)
+![图片加载失败](../../../../assets/images/project/lowcode-compare.png)
 
 
 ## 项目价值
