--- a/src/collect/performance/3.性能优化落地.md
+++ b/src/collect/performance/3.性能优化落地.md
@@ -10,3 +10,96 @@
 - 需求范围和优先级确定等过程
 
 为什么把需求范围和优先级确定放在后面？因为性能优化项目是探索性的项目需求，业务目标一般都有明确的项目目标和需求修改范围，而探索性项目需求，目标不确定，一般需要先选定项目团队，做完技术调研，才能确定出项目目标。
+
+### 项目目标制定
+
+性能项目的目标制定是一个正推与反推结合的过程。
+
+正推：线索 -> 本质或痛点问题 -> 解决方案 -> 目标
+
+最终项目首屏时间可以减少 10%，对应 VPPV 可以提升 3%。
+
+要达成一个“性感”的目标，至少需要提升 10% 的收入提升（平时波动都有 2%）。
+
+VPPV：详情页的 UV 除以 列表页的 PV，这个指标和最终收入正相关，通俗一点来说就是，来店里的用户中，有多少最后买了东西。（省略了 VPPV 到广告收入的转化过程，用 VPPV 代替收益）。
+
+怎么实现 10% 的收入提升呢，这时候就需要**反推**的过程。
+
+反推：目标 -> 解决方案 -> 本质或痛点问题 -> 线索
+
+想要 10% 的收入提升（VPPV），至少需要 30% 的性能提升。
+
+##@# 获取业务侧支持
+
+前端团队一般都投入在各个业务方向，要做性能优化，就需要说明业务将部分前端资源投入到这个性能优化项目上来。
+
+为了评估值不值得花时间在这上面，前端同学会和你提到项目收益。
+
+技术方向收益：
+- 加载时间提升了多少
+- 可以学到什么新技术 比如 react hooks，vue3等
+
+业务方向收益：
+- 流量增加多少
+- 转化率提升多少
+- 跳出率降低多少
+
+我们需要了解业务的关注点，从业务的角度去思考，去回答。
+
+项目名：奥林匹亚项目，意思是更高、更快、更强。
+
+最初：通过请求资源优化，将首屏时间提升 30%，后面为了让业务同事更直观理解项目收益，我们就把目标改成了“通过性能提升 30%，提升 VPPV 10%”。
+
+### 立项时机
+
+一定要做好**技术可行性调研**，性能优化是横向项目，会涉及多个业务，最好在试点两个业务后，再正式立项。
+
+投入资源：前端 FE 10人，后端 RD 4 人，UI 设计 4 人，测试 2 人。
+投入价值：20 人，2 个月，40 人月，约 XX 成本。
+收获价值：访问量，VPPV 提升 10%，订单提升 8 %，约 XXX 万美金/季度。
+
+一开始也想过从 0 到 1 完整做一个性能监控平台，但因为时间和人力关系，只能作罢。
+
+直接选取了一个已经在用的一个开源展示平台，具体的数据指标定义和采集，需要我们自己来做。
+
+## 性能诊断优化
+
+结合页面加载过程，进行性能问题诊断和优化。
+
+瓶颈点：
+- 主要是通过本地缓存方案减少客户端请求数
+- 同时让运维同时对静态资源配置了合理的过期时间，实现静态资源的强缓存方案。
+- 对页面做了 DNS 的预解析处理。
+- 对广告做懒加载。
+- 为了确保页面解析不被中断，我们还对列表页的加载资源做了处理，也制定了 CSS 相关的规范，确保嵌套层次更少，让规则解析更简单。
+
+### 弱网下的性能优化：
+
+发现数据不及预期，后来在家里 2G 网络测试了一下，发现白屏了。
+
+网络测速过程中，发现我们的弱网（2G、3G）用户超过 50%。
+
+- 尽可能合并请求（弱网下一个请求都需要2S），最后 26 个请求最后合并到了 11 个。
+- 小图标采用 Base64 Encoding 的方式，内嵌于页面中，不用额外发网络请求来获取。
+- 针对弱网（特别是移动网络），不自动加载图片，只显示本占位图。
+
+首屏时间从 2.5 S 提升到 1.5 s。
+
+> 注意：如果性能优化涉及多条业务线，最好是先把一条业务线打透，确保收入数据确实提升了，再推广到其它业务。
+
+优化的时候同时选了招聘和房产业务，结果因为一个问题，业务收入没有如预期的那样提升 10%，而是直接**降低了 20%**。
+
+今天的数据是利好还是利空，如果是利空，还需要顶着业务同学压力，通过性能优化把收入数据优化提升上去。
+
+## 小结
+经过性能立项、性能采集和性能监控诊断，最后落实实施。
+
+这个项目到底沉淀下来什么？是造轮子还是为业务打下了坚厚的基建基础？
+
+性能监控预警平台肯定是一个大的沉淀，但是除此之外呢？怎么确保一个新人，在做性能优化时也能做到 80 分的水平？ 所以需要把优化过程的最佳实践沉淀下来。
+
+未来如果有人 Review 这段代码，你希望学到什么？
+
+希望在实际工作当中，你在性能优化之后记得把经验沉淀下来，可以写成文档或代码。
+
+问题：优化前后如何对比数据，如果我们只是对比上线前后的数据，怎么排除这段时间业务升级带来的影响？
