--- a/src/collect/performance/1.性能优化体系和关键指标制定.md
+++ b/src/collect/performance/1.性能优化体系和关键指标制定.md
@@ -7,7 +7,7 @@
 
 ## 性能优化体系
 ### 性能优化流程
-- 指标设定：选择什么样的指标，比如页面打开慢从哪些地方入口，优化完怎么知道问题解决了？
+- 指标设定：选择什么样的指标，比如页面打开慢从哪些地方入手，优化完怎么知道问题解决了？
 - 性能标准：性能优化目标是怎样的？优化到什么程度合适？比如优化 APP 内 H5 页面的打开速度，确定的指标是秒开率，1秒内打开的请求比例就是它的性能标准。
 - 收益评估：很多时候，为了让产品同学感觉我们是为产品服务，而不是又在造轮子，还需要关联产品目标进行收益预估。比如列表页到详情页的转化率能不能提升，用户跳出率能不能降低等。
 - 诊断清单：把业务代码接入性能监控预警平台，根据性能标准给出诊断清单。
