--- a/src/note/vscode/快捷键和插件.md
+++ b/src/note/vscode/快捷键和插件.md
@@ -1,4 +1,4 @@
-U## 前言
+## 前言
 先来说下`vscode`的优点：
 1. **轻量级和灵活性**：`vscode`走的是`插件化`的设计思路，因此它本身软件比较轻量，其它功能通过插件进行扩展，我们也可以自己动手去写插件，集轻量性和灵活性于一身。
 2. **强大的插件生态系统和活跃的社区**：`vscode`拥有十分强大的插件生态系统，各种常见的功能都能很容易找到对应的插件，满足我们日常的开发可以说是绰绰有余啦！而且它的社区非常活跃，有问题可以去社区寻找答案。
@@ -9,105 +9,140 @@ U## 前言
 拥有这么多优点，难怪现在能成为我们前端程序员的宠儿。
 
 在日常开发中，如果能掌握好vscode的使用方法和技巧，那写起代码来真的是`手拿把攥`，事半功倍，接下来给大家介绍一些又好用又能提升效率的`vscode插件和快捷键`。
-## vscode插件
-### 1. live-server
+## 1、vscode插件
+### 1.1 Live-server
 
-![图片加载失败](../../assets/images/vscode/plugin-1.png)
+![图片加载失败](../../assets/images/vscode/plugin-live-server.png)
 
 这个插件会启动一个本地的服务器，可以实时预览代码效果，不需要手动刷新，比如我们写一个`html文件`时，想实时看到`html`在浏览器中的预览效果，这个就非常合适了。
-### 2. Auto Rename Tag
+### 1.2 Auto Rename Tag
 
-![图片加载失败](../../assets/images/vscode/plugin-2.png)
+![图片加载失败](../../assets/images/vscode/plugin-auto-rename-tag.png)
 
 这个插件可以帮助我们对`XML/HTML标签对`重命名，比如你需要把标签`<a></a>`改成`<p></p>`，你只需要改把`开始标签`的`a`改成`p`即可，这个插件会帮你同步修改`结束标签`。
-### 3. Auto Close Tag
+### 1.3 Code Spell Checker
 
-![图片加载失败](../../assets/images/vscode/plugin-3.png)
-
-这个一看名字就知道，这是一个自动添加 `HTML/XML 关闭标签`的插件。
-### 4. Code Spell Checker
-
-![图片加载失败](../../assets/images/vscode/plugin-4.png)
+![图片加载失败](../../assets/images/vscode/plugin-code-spell-checker.png)
 
 
 这个插件可以对你的代码进行`拼接检查`，比如你拼写了一个错误的单词，他会给出标记。
 
-![图片加载失败](../../assets/images/vscode/plugin-4-1.png)
+![图片加载失败](../../assets/images/vscode/plugin-code-spell-checker-1.png)
 
 
-### 5. Code Runner
+### 1.4 Code Runner
 
-![图片加载失败](../../assets/images/vscode/plugin-5.png)
+![图片加载失败](../../assets/images/vscode/plugin-code-runner.png)
 
 可以右键直接运行代码，支持多种语言，比如C, C++, Java, Javascript, JS, PHP, Python, Ruby, Go等。
 
-![图片加载失败](../../assets/images/vscode/plugin-5-1.png)
+![图片加载失败](../../assets/images/vscode/plugin-code-runner-1.png)
 
 如果要运行ts，需要先全局安装`typescript`和`ts-node`。
-### 6. CodeGeeX
+### 1.5 CodeGeeX
 
-![图片加载失败](../../assets/images/vscode/plugin-6.png)
+![图片加载失败](../../assets/images/vscode/plugin-codegeex.png)
 
 这是一款`免费的`AI代码辅助工具，它提供代码生成/完成、评论生成、代码翻译和基于AI的聊天等功能，我们用它写代码的话，它会帮助我们进行`代码推导`和`自动补全`，还可以帮助我们`一键生成注释`，有什么技术问题也可以使用它的聊天功能进行询问找寻答案，可以说十分方便，最重要的是只需要去它的官网注册一个账号即可`免费使用`。
-### 7. JavaScript (ES6) code snippets
+### 1.6 JavaScript (ES6) code snippets
 
-![图片加载失败](../../assets/images/vscode/plugin-7.png)
+![图片加载失败](../../assets/images/vscode/plugin-javascript-code-snippets.png)
 
-这个插件预设了很多`ES6`的代码片段（现在不会有人写项目还用ES5吧，不会吧不会吧！），可以使用它定义好的一些快捷键触发对应预设的 ES6 语法片段，从而提高我们的开发效率。
-### 8. Git History
+这个插件预设了很多`ES6`的代码片段，可以使用它定义好的一些快捷键触发对应预设的 ES6 语法片段 snippets，从而提高我们的开发效率。
+### 1.7 Git History
 
-![图片加载失败](../../assets/images/vscode/plugin-8.png)
+![图片加载失败](../../assets/images/vscode/plugin-git-history.png)
 
 这个插件可以帮助我们`查看git日志、文件历史记录、比较分支或提交`，对于项目多人协助和定位bug非常有用。
 
-### 9. Volar
+### 1.8 Vue (Official)
 
-![图片加载失败](../../assets/images/vscode/plugin-9.png)
 
-一款支持`vue3`的官方推荐插件。
+![图片加载失败](../../assets/images/vscode/plugin-vue.png)
 
+一款支持`vue3`的官方推荐插件，从 `Volar` 更名而来，支持 `vue` 最新语法。
+
+### 1.9 Vue VSCode Snippets
+
+![图片加载失败](../../assets/images/vscode/plugin-vue-snippets.png)
+
+里面内置了很多`vue`的代码片段，比如创建单文件基础架子的 `vbase`, `template` 相关的 `vfor`、`vmodel`等，也支持 `Vue Composition API`、`Vuex`、`vue-router` 等相关常用的代码片段，非常实用。
+
+### 1.10 GitHub Repositories
+
+![图片加载失败](../../assets/images/vscode/plugin-github-repositories.png)
+
+我之前如果想在 vscode 中查看 `GitHub` 上的代码，需要通过 `git clone` 或者 `download` 的方式先将 `GitHub` 仓库代码下载到本地。
+
+用上这个插件之后，可以在 `VSCode` 中直接浏览、编辑 `GitHub` 仓库代码，并且支持 `搜索` 功能，非常方便。
+
+
+### 1.11 javascript console utils
+![图片加载失败](../../assets/images/vscode/plugin-javascript-console-utils.png)
+
+安装上这个插件后，使用 `Ctrl/Cmd + Shift + L` 可以快速生成 `console.log` 语句， 也可以光标选中变量再按 `Ctrl/Cmd + Shift + L`, 会把变量名称也打印出来，十分方便。
 
 接下来给大家介绍一些`vscode非常好用的快捷键`。
-## VScode快捷键
-### 1. 下一个相同变量
+## 2、VScode快捷键
+### 2.1 下一个相同变量
 光标选中某个变量后，可以用`Ctrl/Command + d`向后查找下一个相同变量，再继续按一次可以继续往下查找。
-### 2.选择所有相同变量
+
+### 2.2 选择所有相同变量
 如果相同变量非常多，又需要对它们统一进行编辑操作，可以使用`Ctrl/Command+shift+l`选中所有相同变量，然后就可以统一进行编辑操作了。
-### 3. 查找并跳转到某个文件
+
+### 2.3 查找并跳转到某个文件
 如果需要查找并跳转到某个文件，可以先按下`Ctrl/Command+p`，然后用输入`文件名`或者`文件路径`，在筛选出的文件列表中点击文件即可跳转到对应的文件中。
-### 4.搜索
-- `Ctrl/Command + f`：文件内搜索 
-- `Ctrl/Command + shift + f`：全局搜索
-### 5. 打开/关闭侧边栏
+
+### 2.4 搜索
+- `Ctrl/Command + f`：文件内搜索。
+- `Ctrl/Command + shift + f`：全局搜索。
+
+### 2.5 打开/关闭侧边栏
 可以使用`Ctrl/Command + b`打开/关闭侧边栏。
-### 6. 移动当前行
-先光标选中某一样，然后可以使用`alt+上/下方向键`向上/向下移动该行。
-### 7. 向上/向下插入一行
-- `Ctrl/Command + enter`：向上插入一行
-- `Ctrl/Command + shift + enter`：向下插入一行
-### 8. 切换工作区
+
+### 2.6 移动相关
+- **移动当前行**：先光标选中某一样，然后可以使用`alt+上/下方向键`向上/向下移动该行。
+- **移动到文件头部、尾部**： `Ctrl + Home/End`（windows），`Ctrl + 上/下方向键`（mac）。
+- **移动到行首、行尾**：`Home/End`（windows，mac 外接键盘下也能用），`Command + 左/右方向键`（mac）。
+- **基于单词的移动**： `Ctrl/Option + 左/右方向键`。
+
+### 2.7 向上/向下插入一行
+- `Ctrl/Command + enter`：向上插入一行。
+- `Ctrl/Command + shift + enter`：向下插入一行。
+
+### 2.8 切换工作区
 可以使用`Ctrl + r`切换打开目录，也就是切换工作区，先按下`Ctrl + r`，然后选择目录即可切换，默认是覆盖当前窗口打开，要新窗口打开需要先按住`Ctrl`键再点击目录。 
-### 9. 重命名文件/文件夹
+
+### 2.9 重命名文件/文件夹
 先选中某一个文件/文件夹，然后`window`按`F2`，`mac`按`enter`键即可重命名当前名文件/文件夹。
-### 10. 转到某一行
+
+### 2.10 转到某一行
 如果文件内容过多，可以使用`Ctrl/Command + g`命令，然后输入行数即可精准定位到某一行。
-### 11. 切换编辑的文件
-- `Ctrl/Command + tab`：切换到下一个文件
-- `Ctrl/Command + shift + tab`：切换到上一个文件
-### 12. 格式化文件
-可以使用`shfit + alt + f`格式化当前文件。
-### 13. 放大缩小编辑器界面
-`Ctrl/Command + +/-`可以放大缩小编辑器界面
-### 14. CV工程师必备
-- `Ctrl/Command + s`：保存
-- `Ctrl/Command + c`：复制
-- `Ctrl/Command + v`：粘贴
-- `Ctrl/Command + x`：剪切
-- `Ctrl/Command + z`：撤销
-- `Ctrl/Command + a`：全选
+
+### 2.11 切换编辑的文件
+- `Ctrl/Command + tab`：切换到下一个文件。
+- `Ctrl/Command + shift + tab`：切换到上一个文件。
+### 2.12 格式化文件
+可以使用`shift + alt + f`格式化当前文件。
+
+### 2.13 放大缩小编辑器界面
+`Ctrl/Command + +/-`可以放大缩小编辑器界面。
+
+### 2.14 折叠/展开代码
+- **折叠/展开当前代码块**：`Ctrl/Command + Shift + [`（折叠当前代码块），`Ctrl/Command + Shift + ]`（展开当前代码块）。
+- **折叠/展开当前文件所有代码**：`Ctrl/Command + k，Ctrl/Command + 0`（折叠所有代码，按住 Ctrl/Command，分别点击 k 和 0），`Ctrl/Command + k，Ctrl/Command + j`（展开所有代码，按住Ctrl/Command，分别点击 k 和 j）。
+- **折叠/展开当前光标所在区域**：`Ctrl/Command + k，Ctrl/Command + [`（折叠光标所在区域代码，按住 Ctrl/Command，分别点击 k 和`[`），`Ctrl/Command + k，Ctrl/Command + ]`（展开光标所在区域代码，按住Ctrl/Command，分别点击 k 和`]`）。
+
+### 2.15 CV工程师必备
+- `Ctrl/Command + s`：保存。
+- `Ctrl/Command + c`：复制。
+- `Ctrl/Command + v`：粘贴。
+- `Ctrl/Command + x`：剪切。
+- `Ctrl/Command + z`：撤销。
+- `Ctrl/Command + a`：全选。
+- `Alt/Option + shift + 上/下方向键`: 复制当前行。
 
 <!-- ## 小结
 以上就是我个人在日常前端开发中常用的`VSCode插件和快捷键`了，熟练使用之后发现开发编码的效率大大提升了，如果大家还有什么好用的`VSCode插件和快捷键`，欢迎大家推荐给我哦！ -->
-
 
 
