--- a/src/note/performance/19.成长之路：前端技术专业能力与业务产出平衡.md
+++ b/src/note/performance/19.成长之路：前端技术专业能力与业务产出平衡.md
@@ -1,1 +1,66 @@
 ## 引言
+一些前端同学说自己好像在日复一日地陷入”开发，提测，上线“的循环中。
+
+好不容易业务节奏放缓，有了一些时间去思考、沉淀自己的经验，却因为缺少方法论，不知道该怎么帮助业务提升效率和质量，最后还是要去加班消化一些业务需求。
+
+相比后端同学要考虑整个 App 或者站点的架构来说，前端同学负责的业务复杂度低一些，很容易关注页面，看不到全貌，从而很难发现业务中的痛点问题。
+
+比如在交易业务中，前端同学负责的就是一个个下单购物车环节的页面。
+
+## 专业能力和业务产出的平衡
+
+现状：
+- 没有时间思考
+- 缺少方法论
+- 只见树木不见森林
+
+解决：
+- 没有时间去思考，是确实没有时间还是效率不高？确实没有时间的话，你要看是不是长期缺人需要补人，还是短期借调解决一下？一般来说，我会看团队内P0需求（对业务来说，做了有收益，不做有损失的重要需求）是否有积压，如果有，要考虑补人。此外，业界有一个后端和前端人数2:1的黄金比例，还有一个运营+产品和前后端研发人数 3:1 的比例。如果超出这些比例阈值，就需要补人。如果效率不够高，先不要考虑补人，而是提高效率。比如和后端数据接口联调需要花费很长时间，那我更愿意从 3 个人中，抽调 2 个人做一套数据接口平台，解决 API 文档存放及数据 mock 的问题，并在后端开发完接口后，可以对接口做一些测试，从而大幅提升联调效率。原来一周的项目需要一半的联调时间，现在半天就联调完了。
+- 其次，缺少方法论的学习。前端工程师做好业务交付的本职工作很重要，但是我们最好是能学习一些方法论，然后去实践它。借助业务周期去做一些规划，电商业务节奏上会有一些规律，在每年的 1-2 月，规划期间需求还没出来，前端同学的业务压力很小，规划期结束后会进入冲流量阶段，持续到6月底。7月初业务会梳理下半年目标，双十一前后，又要忙碌起来。年底节奏会放缓，年底会有2周左右的时间做总结、评定绩效和评优等工作。一年间，5周左右的时间节奏较缓，可以做一些偏长线的事情，比如建设脚手架基础体系、技术组件、提升性能体验等，这样我们效率和体验会大幅提高。
+- 最后，只见树木不见森林是在提醒你理清业务架构全貌。前端工程师要界定好前后端的边界和职责，前端的职责很重要的一点是效率提升和质量提高。比如我们要解决项目延期导致的效率问题，对问题分析后发现是提测阶段质量不高，修复问题要占用很多时间，解决完问题后，bug 还会往复。那么前端同学就需要提升代码和自测的质量，提测代码前要过一遍冒烟 CASE，冒烟通过才允许提测。这样一来，可以有效解决项目延期的问题。
+
+前端职责另外一个重要点是解决业务中的痛点问题。比如我们有一个对手机做质量检测的业务，检测完可以生成一个质检报告，告诉用户这台手机值多少钱。那么前端同学就需要开发维护一个质检平台，平台上的数据有的来源于线上采集，比如小程序去检测机器摄像头是否好、质检工程师肉眼检测机器是否有划痕等，有的还需要通过一些富士康机器人去检测，苹果内部硬件有无问题，前前后后用户需要78步才能完成报告的输入，当前端同学结合用户质检情况，改造一些流程后，主要是减少质检工程师操作的步长，31步就可以完成质检，提升了 50% 的效率，为质检团队节省了 40% 的人力，给公司带来了巨大的商业价值。
+
+总体来说，解决完上述三个问题，我们就可以保持专业能力和业务产出的平衡，在这种情况下，就有时间去做一些看不见，但是长期有价值的事情。
+
+## 如何成为前端性能技术专家
+- 专业能力
+- 工程能力
+- 做事方法
+
+### 专业能力
+
+所强调的专业能力是指围绕“前端技术体系”下的技术能力。
+
+有些同学会漫无目的学习一些技术方案，如 WebAssembly,webGl等，这些技术方案在电商业务背景下，暂时没有使用场景，而有些技术方案我们经常会用到，比如性能优化所需的首屏优化手段、离线包和骨架屏等、webpack打包等知识。针对这些专业能力，你需要思考它的原理，在什么场景下需要用到，为了解决什么目标，具体做了哪些技术方案，最终取得了什么结果，有什么注意事项，有什么演进。坚持做上述事情，只需要3年时间就能看到你的明显成长。
+
+### 工程能力
+
+工程能力是指前端工程师需要具备“持续稳定交付某个产品”所需要的能力。想开发效率高，又想品质有保证，必须依赖工程能力，这里强调的工程能力包含在以下9个环节中：
+- UI&需求评审
+- 方案设计&评审：如果你的项目，每次都是自己出设计方案，没有和别人碰撞过思路，那这个设计能力上限就是你自己。比如我们前端团队有70多人，其中15人工作5-10年，他们会在你给出技术方案后，提供建议，比如你遇到图片上传时体积过大，上传速度慢的问题，原本想通过 webp 图片的格式来解决，但其他同学提议用 base64 encoding 的方式，这样一来可以把二进制的图片内容编码为文本信息，文本信息可以分组并行传输，大大提升了传输性能。
+- WBS分解排期、开发
+  - 预留一定的 buffer，应对项目中的不确定性风险，如 UI 出图慢，PM 需求变更，RD 接口延期等。
+  - 做一些高要求的事情，比如提升性能体验，秒开率做到 95%，往往这些高要求影响了个人成长速度。在开发阶段，我们前紧后松，拼尽全力，做这些高要求的事情，比如体验较好的页面效果，长期以往专业能力提升很快。
+- 单测&自测、代码review
+- 提测
+- 上线
+- 项目总结文档整合。
+
+### 做事方法
+
+做事方法更倾向于软素质，比如项目管理能力、规划能力、自控力和影响力等。如果项目管理能力不好，你会陷入眼高手低的状态，想法很多也很好，但落不下去，不是要不到资源就是争取不到别人的帮助，或者经常延期，达不成项目目标。
+
+- 项目管理能力参考第三讲。
+- 自控力更多的指持续输出价值。“一颗枣树只有在结枣子的时候，人们才会认得它，一旦它不结枣子了，无论它以前结过多少枣子，人们都不会再承认它是枣树。”这也就是说，某一刻输出价值很容易，但通过自控力源源不断的输出价值，其实很难。
+- 影响力背后的本质是利他性。你帮助别人实现价值的过程中，也实现了自己的价值。比如当前业务的目标是转化率不够，那你如果能帮助他提升3%的转化指标，这种影响力也才ok。
+
+## 小结
+
+带你了解怎么寻求业务开发和专业性提升的平衡，以及工程师的成长之路。这个过程贯穿其中的就是高要求三个字，而体验性能就是非常重要的一项。
+
+蚂蚁金服周玉伯：
+- 业务为正：业务交付的效率怎样？是按时交付、提前交付、还是延后交付，和业务方协作怎样？质量如何？
+- 能力为奇：包括专业能力、工程能力、做事方法等。
+
+业务是立足之本，而前端能力的差异在往大了说是效率和质量，质量很重要的就是线上运行的质量，其中性能体验是我们能够给用户提供的一个重要价值点。
