--- a/src/note/performance/0.性能优化前篇.md
+++ b/src/note/performance/0.性能优化前篇.md
@@ -37,7 +37,7 @@
 - 前端性能优化方法论
   - 性能优化整个体系是怎样的
   - 在页面加载过程中有哪些性能瓶颈点
-  - 如何通过业务收益计算，说明老板和同事发起一个性能项目
+  - 如何通过业务收益计算，说服老板和同事发起一个性能项目
 - 指标采集上报及优化手段
   - 优化实战过程中，如何确定性能指标
   - 如何采集上报，尤其是对首屏时间的度量是业界的难题
@@ -46,9 +46,9 @@
 - 性能问题诊断、优化手段、预警
   - 如何根据性能问题平台，结合一些检查清单（如全量 VS 增量、同步 VS 异步、实时 VS 缓存、原片 VS 压缩）来诊断中性能问题。
   - 如何预警
-- Hybid 下的进阶优化
+- Hybrid 下的进阶优化
   - App 端的性能优化难度会更大
-  - 跨 APP 和 H5 之间，如果不了解 Hybid 的知识，优化收益会非常有限，如 webview 的优化
+  - 跨 APP 和 H5 之间，如果不了解 Hybrid 的知识，优化收益会非常有限，如 webview 的优化
 - 一线大厂性能优化体系演进
   - 腾讯的首屏方案和美团的首屏方案各有哪些优缺点
   - 小程序环境中怎么设定性能指标，如何与 H5 性能体系对接
