--- a/src/note/emotion/浪漫.md
+++ b/src/note/emotion/浪漫.md
@@ -5,6 +5,6 @@
 
 1. 只言片语，已读不回，是因为我想爱你更久。（因为那时候回了，可能会打扰她的心境）
 2. 朋友圈，我看得到，并不会有一星点介意，而是反复在你眼睛里试图找到些安稳和快乐。倘若找到了，也便有了今天的安稳，和快乐。（朋友圈发坏情绪）
-3. 没一家体验好的餐馆，都是给xx的心愿地图。每一份食物的亮泽，都是以后xx眼睛里闪烁的光芒。
+3. 每一家体验好的餐馆，都是给xx的心愿地图。每一份食物的亮泽，都是以后xx眼睛里闪烁的光芒。
 
 刚开始恋爱那会妙语连珠。
