--- a/src/note/emotion/道歉用语.md
+++ b/src/note/emotion/道歉用语.md
@@ -28,9 +28,20 @@
 
 
 
-
  先等几天，如果女生还是没回复的话，就准备一个高级的约会场所，并且发一段诚恳硬气的话：这几天我确实错了，不该怎么样，但我心里其实还是喜欢你，不想这么多年的相处化为泡影，但是如果你确实觉得不可挽回，那我也愿意为自己的错误买单，如果你觉得我们还有相处的可能，可以再继续聊下 
  
  类似这样的话，表达诚恳的道歉，＋告诉对方自己也不是非对方不可，可以接受这个事实，＋一个高价值约会的地方 
  
  最后约会的时候精心准备下，给对方好的体验，那么你们大概率会和好如初，且对方会更喜欢你
+
+ ## 告别
+
+ 高晓松在和前妻离婚时赠言：“感谢时光于流逝中的恩宠，感谢成长与回望，感谢缘分和信仰。聚散自由天注定，不怨天，不怨命，但求山水公作证。”
+ 
+ 李宗盛和林忆莲离婚的时候也极尽温柔：“我们的爱若是错误，愿你我没有白白受苦。
+ 
+ ”成年人给彼此最后的爱，是知趣，是清醒。不再把情绪，浪费在决定要放下的人身上。
+ 
+ 就像歌中那样唱的：“天地江湖日月，不留不念不说话。”我们能够相识 这就是一件幸运的事。
+ 
+ 我为你而有过的笑容 偷偷掉过的眼泪，以及被你发现我偷看你时 四目相对， 比平常多跳动那几下的心跳，这些都证明了有奇迹在我身上发生过。说真的 人的心跳总有一天会停止 在有限的心跳中，有一部分是为生命中闪闪发光的人偷偷多跳的真是一件美好的事  所以我能够喜欢过你已经是很棒的事啦！
