--- a/src/note/develop/工具.md
+++ b/src/note/develop/工具.md
@@ -3,6 +3,9 @@
 windows: [screentogif](https://www.screentogif.com/)
 mac: [getkap](https://getkap.co/)
 
+
+`command + shift + 5` 录屏，然后用 `https://www.freeconvert.com/zh/convert/video-to-gif` 网站在线转为 gif。
+
 ## 录屏显示屏幕案件
 mac: [keycastr](https://github.com/keycastr/keycastr/releases)
 windows: [KeyCastOW](https://zhuanlan.zhihu.com/p/26385705)
