--- a/src/note/algorithm/算法基础.md
+++ b/src/note/algorithm/算法基础.md
@@ -1,3 +1,9 @@
+## 为什么要学习数据结构和算法？
+- 最直接的的好处就是能写出高性能的代码，从长远来看，这是对编程内功的修炼，帮助自己能够设计基础架构，提升编程技能，训练逻辑思维。
+- 对于业务开发人员来说，熟悉数据结构和算法对于阅读业务使用的框架源码，理解其背后的设计思想是非常有用的。
+- 对于找工作的同学来说，这个是大厂面试的敲门砖。大厂一般很看重候选人的潜力，特别是对于校招同学来说，大厂很喜欢考数据结构和算法，一般在一轮面试中会有 1-2 道算法题，想拿大厂 offer 不要让数据结构和算法拖了后腿。
+- 对于架构研发工程师来说，设计的框架中，用的算法是不是够优化，数据存取的效率是不是够高，内存是不是够节省，这些问题的答案需要对数据结构和算法有深入的理解才能知道。
+
 ## 复杂度
 
 时间复杂度，空间复杂度
