--- a/src/note/performance/2.性能瓶颈点：从URL输入到页面加载整过程分析.md
+++ b/src/note/performance/2.性能瓶颈点：从URL输入到页面加载整过程分析.md
@@ -62,14 +62,14 @@
 - 绘制（Paint）
 
 - 构建 DOM 树的瓶颈点：
-  - 当 HTML 标签不满足 Web 语义化时，浏览器就需要更多时间去解析 DOM 标签的含义。比如 br 标签少写了结束的符号，表格嵌套不标准，标签层次结构复杂等，这会导致浏览器会进行语法纠错，这就会导致页面总的解析和渲染阶段需要更长的事件，严重影响页面展示性能。
+  - 当 HTML 标签不满足 Web 语义化时，浏览器就需要更多时间去解析 DOM 标签的含义。比如 br 标签少写了结束的符号，表格嵌套不标准，标签层次结构复杂等，这会导致浏览器会进行语法纠错，这就会导致页面总的解析和渲染阶段需要更长的时间，严重影响页面展示性能。
   - DOM 节点的数量越多，构建DOM树的时间就会变长，进而延迟解析时间，拖慢页面展示速度。
   - 文档中包含 `<script>` 标签时的情况，无论是 DOM 或者 CSSOM 都可以被 JavaScript 所访问并修改，所以一旦在页面解析时遇到 `<script>` 标签，浏览器会停止解析 DOM，DOM 的构造过程就会暂停，等待服务器请求脚本。外部 `<script>` 常被称为“解析”阶段的拦路虎，有时就因为解析过程多了一个 `<script>`，造成页面解析阶段从 200ms 变为 1s。所以外部脚本的加载时机一定要确定好，能够延迟加载选用延迟加载，通过使用 `defer` 和 `async`，告诉浏览器在等待脚本下载期间不阻止解析过程。
 
 - 布局中的瓶颈点：
   - 浏览器会根据样式解析器给出的样式规则，来计算某个元素需要占据的空间大小和屏幕中的位置，借助计算结果，来进行布局。（主线程采用流模型的布局方式，就是从左到右，从上到下，遍历一遍所有的元素）。
   - 假设我们在页面渲染过程运行时修改了一个元素的属性，这时候布局阶段受到了影响，浏览器必须检查所有其他区域的元素，然后自动重排页面，相当于整个渲染流程重新来了一遍。
-  - 因为浏览器每次布局计算都要作用于整个 DOM，如果元素量大，计算出所有元素的位置和尺寸会花很长的事件，所以布局阶段很容易成为性能瓶颈点。
+  - 因为浏览器每次布局计算都要作用于整个 DOM，如果元素量大，计算出所有元素的位置和尺寸会花很长的时间，所以布局阶段很容易成为性能瓶颈点。
 
 比如没有确定列表页的图片初始大小，只给定了一个基础的占位尺寸，当图片加载完毕后，主线程才知道了图片的大小，不得不重新进行布局计算，然后再次进行页面渲染。
 
