--- a/src/note/algorithm/算法基础.md
+++ b/src/note/algorithm/算法基础.md
@@ -4,6 +4,11 @@
 - 对于找工作的同学来说，这个是大厂面试的敲门砖。大厂一般很看重候选人的潜力，特别是对于校招同学来说，大厂很喜欢考数据结构和算法，一般在一轮面试中会有 1-2 道算法题，想拿大厂 offer 不要让数据结构和算法拖了后腿。
 - 对于架构研发工程师来说，设计的框架中，用的算法是不是够优化，数据存取的效率是不是够高，内存是不是够节省，这些问题的答案需要对数据结构和算法有深入的理解才能知道。
 
+
+## 什么是数据机构和算法？
+
+简单来说，数据结构就是一组数据的存储结构，算法是操作数据的一组方法。
+
 ## 复杂度
 
 时间复杂度，空间复杂度
