--- a/src/note/develop/电脑.md
+++ b/src/note/develop/电脑.md
@@ -25,3 +25,6 @@
 5. 分别打开一次 Word、Excel、PowerPoint 软件，以确保能激活到
 
 6. 打开激活软件 HEU KMS Activator，选择【智能激活】，点击【开始】
+
+
+HEU KMS Activator下载地址：https://github.com/zbezj/HEU_KMS_Activator/tree/master
