--- a/src/note/performance/1.性能优化体系和关键指标制定.md
+++ b/src/note/performance/1.性能优化体系和关键指标制定.md
@@ -66,7 +66,7 @@
 - 从**重要性角度**看，打开页面后，第一眼看到的内容一般都非常关键，比如电商的头图、商品价格、购买按钮等。这些内容即使在最恶劣的网路环境下，我们也要确保用户能看得到。
 - 从**体验完成性角度**看，进入页面后先是白屏，随后第一个字符加载，到首屏内容显示结束，我们才会认为加载完毕，用户可以使用了。
 
-首屏时间的标准，最初只是根据这个页面对事件是否敏感来判定，主要以用户平均首屏加载时间来计算，并没有详细区分 2G/3G/4G/5G/WiFi 这些网络环境。
+首屏时间的标准，最初只是根据这个页面对时间是否敏感来判定，主要以用户平均首屏加载时间来计算，并没有详细区分 2G/3G/4G/5G/WiFi 这些网络环境。
 
 比如百度文库：
 | 类别 | 快 | 较快 | 慢 | 很慢 | 指标示例 |
