--- a/src/note/performance/4.指标采集：首屏时间指标采集具体办法.md
+++ b/src/note/performance/4.指标采集：首屏时间指标采集具体办法.md
@@ -57,7 +57,7 @@ DOMContentLoaded 时间具体的采集思路是怎么样的呢？
 
 ### 单页面（SPA）应用业务下的采集办法
 
-2018年6月的 GMTC 大会上，阿里云曾分享了它们的首屏指标采集结果：使用 Perfformance API 接口采集的首屏时间是 1106 ms，实际的首屏时间是 1976 ms。
+2018年6月的 GMTC 大会上，阿里云曾分享了它们的首屏指标采集结果：使用 Performance API 接口采集的首屏时间是 1106 ms，实际的首屏时间是 1976 ms。
 
 - 在 Vue 页面中，用户请求一个页面时，页面会先加载 index.html，加载完成后，就会触发 DOMContentLoaded 和 load。（页面空白，不是真正意义上的首屏页）
 - 页面会加载相关脚本资源并通过 axios 异步请求数据，使用数据渲染页面主题部分，这个时候首屏才渲染完成。
