--- a/src/note/interview/project/监控/面试描述.md
+++ b/src/note/interview/project/监控/面试描述.md
@@ -26,12 +26,8 @@
 使用 web-vitals，这是标准化库。
 
 ```ts
-import { getCLS, getFID, getLCP, getTTFB } from 'web-vitals';
+import { onLCP, onINP, onCLS } from 'web-vitals';
 
-getCLS(onCLS);
-getFID(onFID);
-getLCP(onLCP);
-getTTFB(onTTFB);
 ```
 
 ## 异常采集
