--- a/src/note/interview/project/监控/面试描述.md
+++ b/src/note/interview/project/监控/面试描述.md
@@ -139,3 +139,8 @@ const getCurrentScope = () => window;
   - 提供浏览器环境下的工具方法。
 - @miaoma/monitor-sdk-node
   - 适配 Node 环境的 Transport 上报实现。
+
+
+## 项目目录
+- /views： 处理路由相关逻辑，和页面和路由的桥接层
+- /types/api: 后端接口返回的类型定义，比如 xxxPayload(post接口参数)、xxxParams(get请求参数)、xxxRes（返回值）
