--- a/src/note/performance/output/性能指标采集.md
+++ b/src/note/performance/output/性能指标采集.md
@@ -19,7 +19,7 @@ window.addEventListener('load', () => {
     firstScreenTime: performance.getEntriesByName('first-contentful-paint')[0]?.startTime || 0,  // 首屏（FCP）
     domReady: timing.domContentLoadedEventEnd - timing.navigationStart,
     pageLoad: timing.loadEventEnd - timing.navigationStart,
-    // 其他指标通过performance.getEntriesByType('paint')或MutationObserver采集
+    // 其他指标通过 performance.getEntriesByType('paint') 或 MutationObserver 采集
   };
 
   // 上报到服务器
@@ -52,7 +52,7 @@ onTTFB(console.log);
 
 
 ## 采样注意点
-- 使用 `Performance` 要注意下兼容性问题，在低版本浏览器中需要用 Date.now() 手动计时。
+- 使用 `Performance` 要注意下兼容性问题，在低版本浏览器中需要用 `Date.now()` 手动计时。
 - 使用 `Chrome DevTools` 的 `Performance 面板`验证采集准确性。
 
 - 内网通过 `Chrome DevTools` 观察首屏时间，这样导致内外网环境不同，首屏时间受到影响，可能会得出“我们网站的首屏时间没问题” 这样的错误结论。
