--- a/src/note/performance/output/性能指标采集.md
+++ b/src/note/performance/output/性能指标采集.md
@@ -1,11 +1,21 @@
-上文讲了我们应该关注什么样的前端指标指标，本篇讲如何采集这些指标
+
+常见的前端指标有 `FP`、`FCP`、`LCP`、`CLS`、`TTFB`、`INP` 等。
+
+| 指标 | 含义 |
+|---------|---------|
+| FP (First Paint)   | 页面渲染第一个像素点的时间   |
+| FCP (First Contentful Paint)  | 页面渲染出第一个有意义内容的时间  |
+| LCP (Largest Contentful Paint)  | 页面最大可见内容元素渲染完成的时间  |
+| CLS (Cumulative Layout Shift)  | 页面布局变化的累积分数  |
+| TTFB (Time to First Byte)  | 从请求发出到接收第一个字节的时间  |
+| INP（Interaction to Next Paint）  | 页面首次交互（点击链接、按钮等）到浏览器实际响应的延迟  |
 
 
-常见的前端指标有 `FP`、`FCP`、`LCP`、`CLS`、`TTFB` 等，那么我们在实际项目中如何采集到它们呢？
+那么我们在实际项目中如何采集到它们呢？
 
 ## 指标采集方案
 
-### Performance API
+### 统计 FP、FCP、TTFB
 
 `Performance` 是浏览器提供的原生 API，我们可以使用 `window.performance` 采集性能数据。
 
@@ -15,19 +25,59 @@ window.addEventListener('load', () => {
   const timing = performance.timing;
 
   const metrics = {
-    whiteScreenTime: timing.domLoading - timing.navigationStart,  // 白屏时间
-    firstScreenTime: performance.getEntriesByName('first-contentful-paint')[0]?.startTime || 0,  // 首屏（FCP）
-    domReady: timing.domContentLoadedEventEnd - timing.navigationStart,
-    pageLoad: timing.loadEventEnd - timing.navigationStart,
-    // 其他指标通过 performance.getEntriesByType('paint') 或 MutationObserver 采集
+    fp: timing.domLoading - timing.navigationStart,  // FP
+    fcp: performance.getEntriesByName('first-contentful-paint')[0]?.startTime || 0,  // FCP
+    ttfb: timing.responseStart - timing.requestStart, // TTFP
   };
 
-  // 上报到服务器
+  // 使用 sendBeacon 上报到服务器
   navigator.sendBeacon('/api/performance', JSON.stringify(metrics));
 });
 ```
 
-### MutationObserver
+### 统计 CLS
+
+
+```js
+let cls = 0;
+const observer = new PerformanceObserver((entryList) => {
+  entryList.getEntries().forEach((entry) => {
+    console.log('entry: ', entry);
+    if (!entry.hadRecentInput) {  // 排除用户输入引起的偏移
+      cls += entry.value;
+      console.log('当前 CLS 值:', cls, entry);
+    }
+  });
+});
+observer.observe({ type: 'layout-shift', buffered: true });
+```
+
+### 统计 INP
+
+```js
+const interactions = [];  // 存储每个交互的最长 duration
+const observer = new PerformanceObserver((list) => {
+  list.getEntries().forEach((entry) => {
+    if (entry.interactionId) {  // 只处理用户交互事件
+      console.log('交互延迟:', entry.duration, entry);
+      interactions.push(entry.duration);  // 收集 duration（实际需按 interactionId 分组取 max）
+    }
+  });
+});
+observer.observe({ type: 'event', buffered: true, durationThreshold: 16 });  // 最小阈值 16ms
+
+// 计算 INP 的函数（在页面卸载时调用）
+function calculateINP() {
+  if (interactions.length === 0) return 0;
+  interactions.sort((a, b) => a - b);
+  const percentile = interactions.length < 50 ? interactions.length - 1 : Math.floor(interactions.length * 0.98) - 1;
+  const inp = interactions[percentile];
+  console.log('最终 INP 值:', inp);
+  return inp;
+}
+
+window.addEventListener('beforeunload', calculateINP);
+```
 
 ### Web Vitals
 
