--- a/src/note/AI/Trae/介绍.md
+++ b/src/note/AI/Trae/介绍.md
@@ -5,3 +5,28 @@
 - 多任务并行：同时进行前端接口调试和bug修复
 - 智能协作：它有一个智能体 Solo coder，可以协同一些子智能体完成一些比较复杂的开发任务。
 - 多种语言支持
+
+## 快捷键
+- Ctrl/Command + U ，打开 Trae 智能体聊天窗口
+
+内置智能体：
+- Chat：普通的聊天智能体，具有阅读、预览、联网搜索等能力，用于与用户进行普通的对话，不能写入文件
+- Builder：构建智能体，用于项目构建，具有阅读、编辑、终端、预览、联网搜索等能力
+- Builder with MCP: 支持使用配置的 MCP Servers。
+- Solo Coder
+- Solo Builder
+## Tab-Cue(context understanding engine)
+
+Tab-Cue 是 Trae 中的一个重要功能，它可以根据用户的输入和上下文，智能地理解用户的意图。
+1. 代码补全
+2. 只能代码重写
+3. 多行协同优化
+  - 数据联想：当编写变量（字段）时，会进行自动联想和补全
+  - 多行批量修改
+4. 光标位置预测
+5. 接受、接受部分和拒绝
+  - tab 键：接受当前建议
+  - shift + tab 键：接受当前建议的部分内容（一行一行接收）
+  - Ctrl/command + -> ：接受当前建议的全部内容(一个单词一个单词接收)
+  - esc 键/继续输入：拒绝当前建议
+6. 配置
