--- a/src/note/performance/5.指标采集：白屏、卡顿等指标采集方法.md
+++ b/src/note/performance/5.指标采集：白屏、卡顿等指标采集方法.md
@@ -51,7 +51,7 @@ FPS（Frames Per Second，每秒显示帧数），大多数资料提到 FPS 在 
 
 **连续 3 帧不低于 20 FPS，且保持恒定。**
 
-在浏览器环境，用 requestionAnimation 计算
+在浏览器环境，用 requestAnimationFrame 计算 FPS
 
 在 APP 环境，app可以直接拿到单帧渲染时长。
 
