--- a/src/note/我的项目/低代码平台.md
+++ b/src/note/我的项目/低代码平台.md
@@ -83,7 +83,7 @@
 
 基于 new Function() 配合 with 语句 + Proxy 拦截实现安全执行沙箱，注入 record、$utils 等上下文
 
-在表格组件中集成表达式解析，支持 `{{ record.status === 'success' ? '#52c41a' : '#f5222d' }}` 语法
+<!-- 在表格组件中集成表达式解析，支持 `{{ record.status === 'success' ? '#52c41a' : '#f5222d' }}` 语法 -->
 
 基于 Monaco Editor 提供智能提示和实时预览，降低业务人员使用门槛
 
